unpackaged/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>
    <description>Capture survey results</description>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>CF{0}</displayFormat>
        <label>Customer Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>