unpackaged/main/default/objects/Customer_Feedback__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Which Admiral Pioneer brand the survey response relate to</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admiral Business</fullName>
            </value>
            <value>
                <fullName>Veygo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>