unpackaged/main/default/objects/Customer_Feedback__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>For question- What’s the main reason you cancelled your policy?</description>
    <inlineHelpText>For question- What’s the main reason you cancelled your policy?</inlineHelpText>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>