unpackaged/main/default/objects/Customer_Feedback__c/fields/Contact_Id_Raw_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_Raw_c__c</fullName>
    <description>Captures contactid in a text field that is being brought back from typeform</description>
    <label>Contact Id Raw</label>
    <length>20</length>
    <type>Text</type>
</CustomField>