unpackaged/main/default/objects/Customer_Feedback__c/fields/Current_work_situation__c.field-meta.xml
<CustomField>
    <fullName>Current_work_situation__c</fullName>
    <description>For question - Which best describes your current work situation?</description>
    <inlineHelpText>For question - Which best describes your current work situation?</inlineHelpText>
    <label>Current work situation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>