unpackaged/main/default/objects/Customer_Feedback__c/fields/Expected_Length_of_Cover_at_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Expected_Length_of_Cover_at_Purchase__c</fullName>
    <description>For question - When you first bought the policy, how long did you expect to need cover?</description>
    <inlineHelpText>For question - When you first bought the policy, how long did you expect to need cover?</inlineHelpText>
    <label>Expected Length of Cover at Purchase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>