unpackaged/main/default/objects/Customer_Feedback__c/fields/Future_Feedback_Contact_Consent__c.field-meta.xml
<CustomField>
    <fullName>Future_Feedback_Contact_Consent__c</fullName>
    <description>For question - Would you be open to being contacted in the future for feedback?</description>
    <inlineHelpText>For question - Would you be open to being contacted in the future for feedback?</inlineHelpText>
    <label>Future Feedback Contact Consent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>