unpackaged/main/default/objects/Customer_Feedback__c/fields/Knowledge_of_Free_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_of_Free_Cancellation__c</fullName>
    <description>For question - Did you know there was no charge to cancel your policy?</description>
    <inlineHelpText>For question - Did you know there was no charge to cancel your policy?</inlineHelpText>
    <label>Knowledge of Free Cancellation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>