unpackaged/main/default/objects/Customer_Feedback__c/fields/Purchase_Method__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Method__c</fullName>
    <description>How purchase was completed - online or over the phone
Question - How did you complete your purchase? (options - online vs over the phone)</description>
    <inlineHelpText>How purchase was completed - online or over the phone
Question - How did you complete your purchase? (options - online vs over the phone)</inlineHelpText>
    <label>Purchase Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>