unpackaged/main/default/objects/Customer_Feedback__c/fields/Reason_for_Choosing_a_Different_Provider__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Choosing_a_Different_Provider__c</fullName>
    <description>For question - What was the main reason you chose a different provider?</description>
    <inlineHelpText>For question - What was the main reason you chose a different provider?</inlineHelpText>
    <label>Reason for Choosing a Different Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>