unpackaged/main/default/objects/Customer_Feedback__c/fields/Retention_Improvement_Factors_3__c.field-meta.xml
<CustomField>
    <fullName>Retention_Improvement_Factors_3__c</fullName>
    <description>For question - Which of these would have made you more likely to keep your cover?</description>
    <inlineHelpText>For question - Which of these would have made you more likely to keep your cover?</inlineHelpText>
    <label>Retention Improvement Factors 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>