unpackaged/main/default/objects/Customer_Feedback__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NPS_Transactional_Post_Purchase</fullName>
                <label>NPS - Transactional - Post Purchase</label>
            </value>
            <value>
                <fullName>Cancellations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>