unpackaged/main/default/objects/Customer_Feedback__c/fields/Type_Form_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Type_Form_Response_ID__c</fullName>
    <label>Response ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>