unpackaged/main/default/objects/Customer_Feedback__c/fields/Type_Form_Response_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Type_Form_Response_Timestamp__c</fullName>
    <label>Response Timestamp</label>
    <type>DateTime</type>
</CustomField>