unpackaged/main/default/objects/Customer_Feedback__c/fields/Typeform_Form_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Typeform_Form_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Typeform Form Mapping</label>
    <referenceTo>typeform__Form_Mapping__c</referenceTo>
    <relationshipLabel>Customer Feedbacks</relationshipLabel>
    <relationshipName>Customer_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>