unpackaged/main/default/objects/Customer_Feedback__c/fields/What_didn_t_match_the_needs__c.field-meta.xml
<CustomField>
    <fullName>What_didn_t_match_the_needs__c</fullName>
    <description>For question - What didn&#39;t match your needs?</description>
    <inlineHelpText>For question - What didn&#39;t match your needs?</inlineHelpText>
    <label>What didn&#39;t match the needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>