unpackaged/main/default/objects/Customer_Feedback__c/fields/What_Happened_With_the_Payment__c.field-meta.xml
<CustomField>
    <fullName>What_Happened_With_the_Payment__c</fullName>
    <description>For question - Which of the following best describes what happened with your payment</description>
    <inlineHelpText>For question - Which of the following best describes what happened with your payment</inlineHelpText>
    <label>What Happened With the Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>