unpackaged/main/default/objects/Customer_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Score__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Type_Form_Response_Timestamp__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>