unpackaged/main/default/objects/Customer_Feedback__c/listViews/All_Cancellation_Responses.listView-meta.xml
<ListView>
    <fullName>All_Cancellation_Responses</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Score__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Type_Form_Response_Timestamp__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>Cancellations</value>
    </filters>
    <label>All Cancellation Responses</label>
</ListView>