unpackaged/main/default/objects/Customer_Feedback__c/listViews/All_NPS_Post_Purchase.listView-meta.xml
<ListView>
    <fullName>All_NPS_Post_Purchase</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Score__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Type_Form_Response_Timestamp__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>NPS_Transactional_Post_Purchase</value>
    </filters>
    <label>All NPS (Post-Purchase)</label>
</ListView>